--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -12,16 +12,13 @@ body {
   margin: 0;
 }
 .mainContainer {
-  //font-family: Arial, Helvetica, sans-serif;
   font-family: 'Open Sans', sans-serif;
-  //padding: 4rem;
-  //margin: 0.5rem 4rem 6rem 4rem;
+  margin-bottom: 10rem;
   align-items: center;
   background-color: $offwhite;
 
   h1 {
     font-family: 'Monofett', cursive;
-    //font-style: italic;
     font-size: 6rem;
     text-align: center;
     background-color: $offblack;
@@ -30,24 +27,21 @@ body {
     border-bottom-left-radius: 20px;
     margin: 0 0 0.67em 50%;
   }
-
-  //font-size: 1.5vw;
 }
 
 .entryCreatorContainer {
-  //border: solid;
   background: $offwhite;
   border-radius: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 5rem 30rem;
-  //box-shadow: 5px 5px 2px $offblack;
-
   box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
     0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
     0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
     0 100px 80px rgba(0, 0, 0, 0.12);
+  min-width: 280px;
+
   input,
   label,
   select {
@@ -86,7 +80,6 @@ body {
 
 .entryContainer {
   display: grid;
-  //grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   grid-template-columns: repeat(3, minmax(380px, 2fr));
   max-width: 1500px;
   padding: 0 3rem;
@@ -96,16 +89,14 @@ body {
   display: grid;
   grid-template-columns: 0.5fr 3fr;
   margin: 0.5rem;
-  //border: 1px solid $offblack;
   border-radius: 10px;
-  //box-shadow: 5px 5px 2px $offblack;
   box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
     0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
     0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
     0 100px 80px rgba(0, 0, 0, 0.12);
   align-items: center;
+  background: $offwhite;
 
-  background: $white;
   h4 {
     font-family: Arial, Helvetica, sans-serif;
     color: $offblack;
@@ -122,7 +113,6 @@ body {
     background-color: $offblack;
     color: $offwhite;
     border: none;
-    //font-family: 'Open Sans', sans-serif;
     font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
     font-size: 1.25rem;
@@ -130,12 +120,18 @@ body {
     padding: 0.5rem 1rem;
     border-radius: 10px;
   }
-  button:hover {
+  .pairBtn {
+    background-color: $offwhite;
+    color: $offblack;
+    text-align: right;
+    font-style: normal;
+  }
+  .deleteBtn:hover {
     font-family: 'Creepster', cursive;
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: $black;
     background-color: $white;
-    box-shadow: 0 3px 10px red;
+    box-shadow: 0 3px 10px $muteOrange2;
   }
 }
 //light background options with tabs
